<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Kayit_olActivity"
    android:background="@color/colorPrimaryDark"
    android:padding="18dp">

    <ImageView
        android:layout_width="391dp"
        android:layout_height="159dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp">
        <EditText
            android:id="@+id/ad"
            android:layout_width="142dp"
            android:layout_height="45dp"
            android:background="@android:color/white"
            android:hint="@string/ad"
            android:textColor="#007776"
            android:textAlignment="center"
            android:textColorHint="@color/textHintColor"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/soyad"
            android:layout_width="142dp"
            android:layout_height="45dp"
            android:layout_marginStart="3dp"
            android:background="@android:color/white"
            android:hint="@string/soyad"
            android:textColor="#007776"
            android:textAlignment="center"
            android:textColorHint="@color/textHintColor"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>



    <EditText
        android:id="@+id/kullanici"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:background="@android:color/white"
        android:inputType="text"
        android:hint="@string/kullanici_adi"
        android:textColorHint="@color/textHintColor"
        android:textColor="#007776"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sifree"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="340dp"
        android:background="@android:color/white"
        android:inputType="textPassword"
        android:hint="@string/sifre"
        android:textColorHint="@color/textHintColor"
        android:textColor="#007776"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/eposta"
        android:layout_width="288dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="410dp"
        android:background="@android:color/white"
        android:inputType="text"
        android:hint="@string/eposta"
        android:textColorHint="@color/textHintColor"
        android:textColor="#007776"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/kayit_Oll"
        android:layout_width="178dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="480dp"
        android:background="@android:color/white"
        android:text="@string/kayitol"
        android:textColor="#007776"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="kayıtOlaBasildi"/>
    <TextView
        android:id="@+id/hesabimZatenvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hesabimvar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:onClick="hesabimzatenvar"/>



</RelativeLayout>