<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity"
    android:background="@color/colorPrimaryDark"
    android:padding="18dp">

    <ImageView
        android:layout_width="391dp"
        android:layout_height="159dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/tarafindan"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="530dp"
        android:layout_centerHorizontal="true"
       />

    <Button
        android:id="@+id/hesabim_Var"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:background="@android:color/white"
        android:text="@string/hesabim_var"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/kayit_Ol"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"

        android:background="@android:color/white"
        android:text="@string/kayitol"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="35sp"
        android:textStyle="bold" />

</RelativeLayout>