<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".View.ProfilActivity">

    <LinearLayout
        android:id="@+id/activity_profil_üst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_resmi_ayarla"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:src="@drawable/people"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="4dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/activity_profil_üst"
        android:paddingTop="40dp"
        android:layout_marginVertical="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            >
            <EditText
                android:id="@+id/ad_guncelle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:hint="@string/adGuncelle"
                android:textColor="#007776"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColorHint="@color/textHintColor"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/soyad_guncelle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:hint="@string/soyadGuncelle"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:textColor="#007776"
                android:textAlignment="center"
                android:textColorHint="@color/textHintColor"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
        <EditText
            android:id="@+id/kullanici_adi_guncelle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/white"
            android:hint="@string/kullanici_guncelle"
            android:layout_weight="1"
            android:textColor="#007776"
            android:textAlignment="center"
            android:textColorHint="@color/textHintColor"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/eposta_guncelle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/white"
            android:hint="@string/eposta_guncelle"
            android:layout_weight="1"
            android:textColor="#007776"
            android:clickable="false"
            android:textAlignment="center"
            android:textColorHint="@color/textHintColor"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/sifre_guncelle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="25dp"
            android:background="@android:color/white"
            android:hint="@string/sifre_guncelle"
            android:layout_weight="1"
            android:textColor="#007776"
            android:textAlignment="center"
            android:textColorHint="@color/textHintColor"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/profil_kaydet"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/degisiklikleri_kaydet"/>
    </LinearLayout>

</RelativeLayout>